--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,6 +20,7 @@ code {
 
 body, html {
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 body {
     margin: 0;
